# NovaStream

./: .bumpversion.cfg  .gitignore  .licenserc.yaml  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: build.yml  dev-build.yml  release-build.yml  release.yml  temp.yml
examples/: basic_usage.py  csv_batch_download.py  scheduled_download.py
src/: __init__.py  downloader.py  driver.py  gui.py  manifest.py  notifications.py  scraper.py  updater.py  utils.py
src/assets/: icon.icns
tests/: conftest.py  test_build.py  test_downloader.py  test_driver.py  test_examples.py  test_manifest.py  test_run_download.py  test_scraper.py  test_utils.py  test_utils_extra.py
