[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "novastream"
version = "1.0.0"
description = "HLS series downloader"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [ { name = "d4rkw3bd31ty" } ]
dependencies = [
    "selenium-wire>=5.1.0",
    "selenium>=4.15.1",
    "webdriver-manager",
    "requests",
    "beautifulsoup4",
    "tqdm",
    "art",
    "colorama",
    "urlgrabber>=4.1.0",
    "blinker<1.5",
    "h11>=0.16.0"
]

[project.scripts]
novastream = "src.gui:main"

[tool.setuptools.package-data]
"src" = ["assets/icon.png"] 